# grocery-shopping-list

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
.cache/clangd/index/: App.cpp.B67196DA2EEB4CD6.idx  App.h.925E2F9ADA693177.idx  MainFrame.cpp.A09967ECC73CA317.idx  MainFrame.h.9BB69ACBE0412739.idx  Placeholder_test.cpp.9CD876221EDFEEE8.idx
.github/workflows/: cmake-single-platform.yml
_bmad-output/brainstorming/: brainstorming-session-2026-02-12.md
_bmad-output/implementation-artifacts/: 1-1-project-setup-application-window.md  1-2-add-grocery-items-to-a-list.md  1-3-section-grouped-card-display.md  2-1-json-serialization-auto-save.md  2-2-load-list-on-startup.md  3-1-edit-an-existing-item.md  3-2-delete-an-item.md  4-1-list-history-selector.md  4-2-read-only-historical-list-view.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-02-13.md  prd.md  ux-design-specification.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/_memory/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
src/app/: App.cpp  App.h
src/domain/: GroceryItem.cpp  GroceryItem.h  GroceryList.cpp  GroceryList.h  IListObserver.h  StoreSection.cpp  StoreSection.h
src/ui/: InputBar.cpp  InputBar.h  MainFrame.cpp  MainFrame.h
tests/domain/: GroceryItem_test.cpp  GroceryList_test.cpp  Placeholder_test.cpp  StoreSection_test.cpp
tests/ui/: InputBar_test.cpp  MainFrame_test.cpp
